--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,27 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Anurag Magar full stack Web developer"
-    />
+    <meta name="description" content="Anurag Magar full stack Web developer" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
     <title>Anurag - Freelance Full-Stack Web Developer</title>
+    <!-- <script src="Gradient.js"></script> -->
   </head>
+  <style>
+    #gradient-canvas {
+      /* --gradient-color-1: #6ec3f4;
+      --gradient-color-2: #3a3aff;
+      --gradient-color-3: #ff61ab;
+      --gradient-color-4: #e63946; */
+
+      --gradient-color-1: #d50018;
+      --gradient-color-2: #25001b;
+      --gradient-color-3: #000000;
+      --gradient-color-4: #000000;
+    }
+  </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="Gradient.js"></script>
   </body>
 </html>
