--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Anurag Magar full stack Web developer" />
+    <meta
+      name="description"
+      content="Anurag Magar from Nepal is a highly skilled full stack Web developer"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
     <title>Anurag - Freelance Full-Stack Web Developer</title>
     <!-- <script src="Gradient.js"></script> -->
